# HW_web_12

./: README.md  main.py  pyproject.toml  requirements.txt
src/conf/: config.py
src/entity/: models.py
src/routes/: auth.py  contacts.py
src/schemas/: user.py
src/services/: auth.py
